feat(docs): improve blocks styling

--- a/apps/web/src/content/docs/components/avatar.mdx
+++ b/apps/web/src/content/docs/components/avatar.mdx
@@ -10,7 +10,7 @@ A circular avatar component for displaying user images or initials, inspired by 
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="flex flex-row flex-wrap items-center gap-12">
   <Avatar>
     <img slot="avatar-image" src="https://github.com/bejamas.png" alt="@bejamas" />
