--- a/apps/web/src/content/docs/components/date.mdx
+++ b/apps/web/src/content/docs/components/date.mdx
@@ -11,7 +11,7 @@ Formats and displays a raw date string in a human-friendly way.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="grid grid-cols-2 gap-4">
   <div>Default:</div> <Date date="2024-06-01T12:00:00Z" />
   <Separator class="col-span-2" />
@@ -242,7 +242,7 @@ import Date from '@bejamas/ui/components/Date.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Date date="2024-06-01T12:00:00Z" includeTime>
   {({ date, time }) => <span>{time} · {date}</span>}
 </Date>
@@ -262,7 +262,7 @@ import Date from '@bejamas/ui/components/Date.astro';
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Date date="2024-06-01T12:00:00Z" locale="fr-FR" />
 <Date date="2024-06-01T12:00:00Z" locale="de-DE" />
 <Date date="2024-06-01T12:00:00Z" locale="es-ES" />
