--- a/apps/web/src/content/docs/components/dropdown.mdx
+++ b/apps/web/src/content/docs/components/dropdown.mdx
@@ -11,7 +11,7 @@ Dropdown menu component using CSS focus states (no JavaScript). Closes on outsid
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Dropdown>
   <span slot="trigger">Menu</span>
   <ul slot="content">
