--- a/apps/web/src/content/docs/components/footer.mdx
+++ b/apps/web/src/content/docs/components/footer.mdx
@@ -12,7 +12,7 @@ Footer component for the page.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Footer>
   <div slot="cta">
     <h2>Call to action</h2>
