--- a/apps/web/src/content/docs/components/input.mdx
+++ b/apps/web/src/content/docs/components/input.mdx
@@ -10,7 +10,7 @@ Base input field used in forms.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Input type="text" placeholder="Enter your email" />
     </div>
   </DocsTabItem>
