--- a/apps/web/src/content/docs/components/navigation-menu.mdx
+++ b/apps/web/src/content/docs/components/navigation-menu.mdx
@@ -12,7 +12,7 @@ Responsive navigation menu with support for slots and custom styling.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <NavigationMenu>
   <div slot="logo">
     <p>Acme, Inc.</p>
