--- a/apps/web/src/content/docs/components/separator.mdx
+++ b/apps/web/src/content/docs/components/separator.mdx
@@ -10,7 +10,7 @@ Visual separator for grouping content, supporting horizontal and vertical orient
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div>
   <div class="space-y-1">
     <h4 class="text-sm leading-none font-medium">Radix Primitives</h4>
