--- a/apps/web/src/content/docs/components/switch.mdx
+++ b/apps/web/src/content/docs/components/switch.mdx
@@ -11,7 +11,7 @@ Accessible toggle switch with custom styling.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="flex items-center gap-3">
   <Switch id="notifications" />
   <Label for="notifications">Enable notifications</Label>
