--- a/apps/web/src/content/docs/components/tabs.mdx
+++ b/apps/web/src/content/docs/components/tabs.mdx
@@ -12,7 +12,7 @@ Minimal accessible tabs component with vanilla JS and Tailwind CSS.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Tabs>
   <div slot="tablist" class="space-x-2 mb-4">
     <Button role="tab" size="sm" aria-selected="true" variant="ghost" class="aria-selected:bg-primary aria-selected:text-primary-foreground">All Posts</Button>
