--- a/apps/web/src/content/docs/components/card.mdx
+++ b/apps/web/src/content/docs/components/card.mdx
@@ -13,7 +13,7 @@ UI container for grouping content with header, footer, etc.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Card class="w-full max-w-sm not-content" footerClass="flex-col gap-2">
   <Fragment slot="header">
     <h3 class="text-xl font-medium mb-3 leading-none">Login to your account</h3>
