--- a/apps/web/src/content/docs/components/checkbox.mdx
+++ b/apps/web/src/content/docs/components/checkbox.mdx
@@ -11,7 +11,7 @@ Accessible checkbox with custom styling and indicator.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="flex flex-col gap-6 not-content">
 <div class="flex items-center gap-3">
   <Checkbox id="terms" />
