--- a/apps/web/src/content/docs/components/dialog.mdx
+++ b/apps/web/src/content/docs/components/dialog.mdx
@@ -13,7 +13,7 @@ Accessible dialog/modal component using the native `<dialog>` element, with open
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Button onclick="myDialog.open()">Manage Cookies</Button>
 <Dialog id="myDialog" class="backdrop-blur-md">
   <Fragment slot="title">Manage Cookies</Fragment>
