--- a/apps/web/src/content/docs/components/label.mdx
+++ b/apps/web/src/content/docs/components/label.mdx
@@ -11,7 +11,7 @@ Accessible and flexible label component with support for disabled states.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="flex items-center space-x-2">
   <Checkbox id="terms" />
   <Label for="terms">Accept terms and conditions</Label>
