--- a/apps/web/src/content/docs/components/select.mdx
+++ b/apps/web/src/content/docs/components/select.mdx
@@ -11,7 +11,7 @@ Accessible select with custom styling and indicator.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="flex flex-col gap-2">
   <Label for="fruits">Select a fruit</Label>
   <Select id="fruits" class="w-[180px]">
@@ -82,9 +82,9 @@ Accessible select with custom styling and indicator.
  * @description Accessible select with custom styling and indicator.
  * @status stable
  * @since 0.1.0
- * 
+ *
  * @example
- * 
+ *
  * <div class="flex flex-col gap-2">
  *   <Label for="fruits">Select a fruit</Label>
  *   <Select id="fruits" class="w-[180px]">
@@ -115,7 +115,7 @@ const {
 } = Astro.props;
 
 const baseClasses =
-  "block w-full select appearance-none relative shadow-xs rounded-lg bg-background ps-4 pe-10 py-2 text-sm text-foreground transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50";
+  "block w-full select appearance-none relative shadow-xs rounded-md bg-background ps-4 pe-10 py-2 text-sm text-foreground transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50";
 
 const optionBaseClasses =
   "px-3 py-1.5 text-foreground hover:bg-foreground/10 active:bg-neutral active:text-neutral-content disabled:text-foreground/40";
@@ -125,7 +125,8 @@ const selectVariants = cva(baseClasses, {
     variant: {
       default: "border border-border",
       ghost: "border-0 bg-transparent shadow-none focus:bg-background",
-      neutral: "border border-neutral/50 focus:border-neutral focus:ring-neutral",
+      neutral:
+        "border border-neutral/50 focus:border-neutral focus:ring-neutral",
     },
   },
   defaultVariants: {
@@ -133,43 +134,53 @@ const selectVariants = cva(baseClasses, {
   },
 });
 
-const selectClasses = cn(selectVariants({ variant }), !showCheckmark && "hide-checkmark");
+const selectClasses = cn(
+  selectVariants({ variant }),
+  !showCheckmark && "hide-checkmark",
+);
 const optionClasses = cn(optionBaseClasses, optionClass);
-const controlId = id || name || `select-${Math.random().toString(36).slice(2, 9)}`;
+const controlId =
+  id || name || `select-${Math.random().toString(36).slice(2, 9)}`;
 ---
 
 <div class={cn("relative")}>
-    <select
-      id={controlId}
-      name={name}
-      value={value}
-      required={required}
-      disabled={disabled}
-      class={cn("select", selectClasses, className)}
-      {...rest}
-    >
-      {options.length
-        ? options.map((opt) => {
-            const isObject = typeof opt === "object";
-            const optionValue = isObject ? opt.value : opt;
-            const optionLabel = isObject ? opt.label ?? opt.value : opt;
-            const optionDisabled = isObject ? Boolean(opt.disabled) : false;
-            return (
-              <option
-                value={optionValue}
-                selected={value === optionValue}
-                disabled={optionDisabled}
-                class={optionClasses}
-              >
-                {optionLabel}
-              </option>
-            );
-          })
-        : <slot />
-      }
-    </select>
-    <ChevronDown slot="indicator" class="size-4 text-foreground/60 absolute right-3 top-1/2 -translate-y-1/2" />
-    <!-- <svg
+  <select
+    id={controlId}
+    name={name}
+    value={value}
+    required={required}
+    disabled={disabled}
+    class={cn("select", selectClasses, className)}
+    {...rest}
+  >
+    {
+      options.length ? (
+        options.map((opt) => {
+          const isObject = typeof opt === "object";
+          const optionValue = isObject ? opt.value : opt;
+          const optionLabel = isObject ? (opt.label ?? opt.value) : opt;
+          const optionDisabled = isObject ? Boolean(opt.disabled) : false;
+          return (
+            <option
+              value={optionValue}
+              selected={value === optionValue}
+              disabled={optionDisabled}
+              class={optionClasses}
+            >
+              {optionLabel}
+            </option>
+          );
+        })
+      ) : (
+        <slot />
+      )
+    }
+  </select>
+  <ChevronDown
+    slot="indicator"
+    class="size-4 text-foreground/60 absolute right-3 top-1/2 -translate-y-1/2"
+  />
+  <!-- <svg
       aria-hidden="true"
       class="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2 h-4 w-4 text-foreground/60"
       viewBox="0 0 20 20"
@@ -188,7 +199,7 @@ const controlId = id || name || `select-${Math.random().toString(36).slice(2, 9)
       @apply hidden;
     }
   }
-    
+
   :where(.select) {
     &::picker(select) {
       @supports (appearance: base-select) {
@@ -196,7 +207,7 @@ const controlId = id || name || `select-${Math.random().toString(36).slice(2, 9)
       }
       max-height: 20dvh;
       border-color: var(--color-border);
-      @apply rounded-lg my-2 p-1 shadow-sm bg-popover text-popover-foreground;
+      @apply rounded-md my-2 p-1 shadow-sm bg-popover text-popover-foreground;
     }
     &::picker-icon {
       @apply hidden;
@@ -206,23 +217,21 @@ const controlId = id || name || `select-${Math.random().toString(36).slice(2, 9)
         @apply mt-[0.5em];
       }
     }
-   
-    :where(option) {
-    @apply transition-colors duration-200 ease-in-out;
 
-    &:not(:disabled) {
-      &:hover,
-      &:focus-visible {
-        @apply cursor-pointer outline-hidden;
-      }
-      &:active {
-        box-shadow: 0 2px calc(var(--depth) * 3px) -2px var(--color-foreground);
+    :where(option) {
+      @apply transition-colors duration-200 ease-in-out;
+
+      &:not(:disabled) {
+        &:hover,
+        &:focus-visible {
+          @apply cursor-pointer outline-hidden;
+        }
+        &:active {
+          box-shadow: 0 2px calc(var(--depth) * 3px) -2px var(--foreground);
+        }
       }
     }
   }
-  }
-
-
 
   @supports (appearance: base-select) {
     select {
