--- a/apps/web/src/content/docs/components/sticky-surface.mdx
+++ b/apps/web/src/content/docs/components/sticky-surface.mdx
@@ -11,7 +11,7 @@ A sticky surface component with scroll-based effects (border, shadow, surface sw
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <div class="overflow-y-auto max-h-[320px] w-full bg-border px-8 border-border">
   <div class="h-[1000px] bg-muted">
     <StickySurface effects={["line", "elevate"]} threshold="1rem" observeStuck class="bg-background p-4 flex justify-between items-center">
