--- a/apps/web/src/content/docs/components/textarea.mdx
+++ b/apps/web/src/content/docs/components/textarea.mdx
@@ -10,7 +10,7 @@ Base textarea field used in forms.
 
 <DocsTabs>
   <DocsTabItem label="Preview">
-    <div class="not-content flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Textarea placeholder="Type your message here..." />
     </div>
   </DocsTabItem>
