feat(ui): add marquee, more work on the components and docs

--- a/apps/web/src/content/docs/components/date.mdx
+++ b/apps/web/src/content/docs/components/date.mdx
@@ -222,19 +222,13 @@ if (parsedDate) {
 
 ## Usage
 
+## Usage
+
 ```astro
 import Date from '@bejamas/ui/components/Date.astro';
 
 <Date date="2024-06-01T12:00:00Z" />
 ```
-
-## Props
-
-- date
-- format (default: "long")
-- includeTime (default: false)
-- locale (default: "en-US")
-- class (default: "")
 
 ## Examples
 
