--- a/apps/web/src/content/docs/components/card.mdx
+++ b/apps/web/src/content/docs/components/card.mdx
@@ -5,9 +5,9 @@ description: UI container for grouping content with header, footer, etc.
 
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
 import Card from '@bejamas/ui/components/Card.astro';
+import Button from '@bejamas/ui/components/Button.astro';
 import Label from '@bejamas/ui/components/Label.astro';
 import Input from '@bejamas/ui/components/Input.astro';
-import Button from '@bejamas/ui/components/Button.astro';
 
 UI container for grouping content with header, footer, etc.
 
@@ -16,7 +16,7 @@ UI container for grouping content with header, footer, etc.
     <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
 <Card class="w-full max-w-sm not-content" footerClass="flex-col gap-2">
   <Fragment slot="header">
-    <h3 class="text-xl font-medium mb-3 leading-none">Login to your account</h3>
+    <h3 class="text-xl font-medium leading-none">Login to your account</h3>
     <p class="text-muted-foreground text-sm">Enter your email below to login to your account</p>
   </Fragment>
 
@@ -50,7 +50,7 @@ UI container for grouping content with header, footer, etc.
 ```astro
 <Card class="w-full max-w-sm not-content" footerClass="flex-col gap-2">
   <Fragment slot="header">
-    <h3 class="text-xl font-medium mb-3 leading-none">Login to your account</h3>
+    <h3 class="text-xl font-medium leading-none">Login to your account</h3>
     <p class="text-muted-foreground text-sm">Enter your email below to login to your account</p>
   </Fragment>
 
@@ -125,12 +125,12 @@ UI container for grouping content with header, footer, etc.
  * @title Card
  * @description UI container for grouping content with header, footer, etc.
  * @status stable
- * 
+ *
  * @example
- * 
+ *
  * <Card class="w-full max-w-sm not-content" footerClass="flex-col gap-2">
  *   <Fragment slot="header">
- *     <h3 class="text-xl font-medium mb-3 leading-none">Login to your account</h3>
+ *     <h3 class="text-xl font-medium leading-none">Login to your account</h3>
  *     <p class="text-muted-foreground text-sm">Enter your email below to login to your account</p>
  *   </Fragment>
  *
@@ -157,101 +157,178 @@ UI container for grouping content with header, footer, etc.
  *     <Button variant="outline" class="w-full">Login with Google</Button>
  *   </Fragment>
  * </Card>
- * 
+ *
  * @usage
- * ## Usage
+ *
  * Update the import path to match your project setup.
- * 
+ *
  * ```astro
  * ---
  * import Card from '@/components/ui/Card.astro';
  * ---
  * ```
- * 
+ *
  * ```astro
  * <Card>
  *   <Fragment slot="header">
- *     <h3 class="text-xl font-medium mb-3 leading-none">Card Title</h3>
+ *     <h3 class="text-xl font-medium leading-none">Card Title</h3>
  *     <p class="text-muted-foreground text-sm">Card Description</p>
  *   </Fragment>
- * 
+ *
  *   <Fragment slot="content">
  *     Card Content
  *   </Fragment>
- * 
+ *
  *   <Fragment slot="footer">
  *     Card Footer
  *   </Fragment>
  * </Card>
  * ```
+
+ * @examples
+ *
+ * ### With background image
+ *
+ * <Card class="relative aspect-[320/390] bg-gray-100 dark:bg-gray-800 w-full max-w-[320px]">
+ *   <Fragment slot="media">
+ *     <img
+ *       alt="Happy pet"
+ *       aria-hidden="true"
+ *       class="pointer-events-none absolute inset-0 h-full w-full select-none object-cover"
+ *       src="/demo/doggo.png"
+ *     />
+ *     <div
+ *       aria-hidden="true"
+ *       class="pointer-events-none absolute bottom-0 left-0 right-0 h-[64px]"
+ *     >
+ *       <div
+ *         class="absolute inset-0 h-[200%] backdrop-blur-sm"
+ *         style={{
+ *           WebkitMaskImage: "linear-gradient(to top, black 80%, transparent)",
+ *           maskImage: "linear-gradient(to top, black 80%, transparent)",
+ *           maskRepeat: "no-repeat",
+ *           maskSize: "100% 100%",
+ *         }}
+ *       />
+ *     </div>
+ *   </Fragment>
+ * 
+ *   <Fragment slot="header">
+ *     <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+ *     <p class="text-sm">loves long walks</p>
+ *   </Fragment>
+ *
+ *   <Fragment slot="footer">
+ *     <p class="text-sm">3 years old</p>
+ *     <Button variant="secondary">Adopt me</Button>
+ *   </Fragment>
+ * </Card>
+ * 
+ * ### Ghost variant
+ *
+ * <Card variant="ghost" class="max-w-[320px]">
+ *   <Fragment slot="media">
+ *     <img
+ *       alt="Happy pet"
+ *       aria-hidden="true"
+ *       src="https://images.unsplash.com/photo-1755899850036-084006cbc1c2?q=80&w=2288&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+ *     />
+ *   </Fragment>
+ *   <Fragment slot="header">
+ *     <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+ *     <p class="text-sm">loves long walks</p>
+ *   </Fragment>
+ * </Card>
+ *
  */
 
 import { cva } from "class-variance-authority";
 import { cn } from "../lib/utils";
 const { variant = "default", class: className = "" } = Astro.props;
 
-const buttonVariants = cva(
-	"text-card-foreground flex flex-col gap-6 rounded-xl py-5",
-	{
-		variants: {
-			variant: {
-				default:
-					"bg-card border border-border shadow-sm",
-				ghost:
-					"",
-			},
-		},
-		defaultVariants: {
-			variant: "default",
-		},
-	}
-)
+const cardVariants = cva(
+  "text-card-foreground overflow-clip p-5 relative flex flex-col rounded-xl",
+  {
+    variants: {
+      variant: {
+        default: "bg-card border border-border shadow-sm",
+        ghost: "",
+      },
+    },
+    defaultVariants: {
+      variant: "default",
+    },
+  },
+);
 
 const headerVariants = cva(
-	"@container/card-header text-pretty grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6",
-	{
-		variants: {
-			variant: {
-				default: "px-4",
-			},
-		},
-	},
+  "@container/card-header relative z-1 text-pretty grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6",
+  {
+    variants: {
+      variant: {
+        // default: "px-4",
+      },
+    },
+  },
 );
 ---
 
 <!-- Card container -->
-<div class={cn(buttonVariants({ variant, className }))}>
-  {Astro.slots.media && (
-    <div class:list={['', Astro.props.mediaClass]} slot="media">
-      <slot name="media" />
-    </div>
-  )}
-  {Astro.slots.header && (
-    <div
-      class={cn(headerVariants({ variant, className: Astro.props.headerClass }))}
-      slot="header"
-    >
-      <slot name="header" />
-    </div>
-  )}
-  {Astro.slots.content && (
-    <div class={cn([{
-      "px-4": variant === "default"}, Astro.props.contentClass ])} 
-    slot="content">
-      <slot name="content" />
-    </div>
-  )}
-  {Astro.slots.footer && (
-    <div class:list={['flex items-center px-4 [.border-t]:pt-6 flex-col gap-2', Astro.props.footerClass]} slot="footer">
-      <slot name="footer" />
-    </div>
-  )}
+<div class={cn(cardVariants({ variant, className }))}>
+  {
+    Astro.slots.media && (
+      <div class:list={["z-0", Astro.props.mediaClass]} slot="media">
+        <slot name="media" />
+      </div>
+    )
+  }
+  {
+    Astro.slots.header && (
+      <div
+        class={cn(
+          headerVariants({ variant, className: Astro.props.headerClass }),
+        )}
+        slot="header"
+      >
+        <slot name="header" />
+      </div>
+    )
+  }
+  {
+    Astro.slots.content && (
+      <div
+        class={cn([
+          {
+            "py-5": variant === "default",
+          },
+          Astro.props.contentClass,
+        ])}
+        slot="content"
+      >
+        <slot name="content" />
+      </div>
+    )
+  }
+  {
+    Astro.slots.footer && (
+      <div
+        class:list={[
+          "flex items-center relative z-1 [.border-t]:pt-6 justify-between gap-2 mt-auto",
+          Astro.props.footerClass,
+        ]}
+        slot="footer"
+      >
+        <slot name="footer" />
+      </div>
+    )
+  }
 </div>
 ```
   </DocsTabItem>
 </DocsTabs>
 
 ## Usage
+
 Update the import path to match your project setup.
 
 ```astro
@@ -263,7 +340,7 @@ import Card from '@/components/ui/Card.astro';
 ```astro
 <Card>
   <Fragment slot="header">
-    <h3 class="text-xl font-medium mb-3 leading-none">Card Title</h3>
+    <h3 class="text-xl font-medium leading-none">Card Title</h3>
     <p class="text-muted-foreground text-sm">Card Description</p>
   </Fragment>
 
@@ -277,7 +354,126 @@ import Card from '@/components/ui/Card.astro';
 </Card>
 ```
 
-## Props
+## Examples
 
-- variant (default: "default")
-- class (default: "")
+### With background image
+
+<DocsTabs>
+  <DocsTabItem label="Preview">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+<Card class="relative aspect-[320/390] bg-gray-100 dark:bg-gray-800 w-full max-w-[320px]">
+  <Fragment slot="media">
+    <img
+      alt="Happy pet"
+      aria-hidden="true"
+      class="pointer-events-none absolute inset-0 h-full w-full select-none object-cover"
+      src="/demo/doggo.png"
+    />
+    <div
+      aria-hidden="true"
+      class="pointer-events-none absolute bottom-0 left-0 right-0 h-[64px]"
+    >
+      <div
+        class="absolute inset-0 h-[200%] backdrop-blur-sm"
+        style={{
+          WebkitMaskImage: "linear-gradient(to top, black 80%, transparent)",
+          maskImage: "linear-gradient(to top, black 80%, transparent)",
+          maskRepeat: "no-repeat",
+          maskSize: "100% 100%",
+        }}
+      />
+    </div>
+  </Fragment>
+
+  <Fragment slot="header">
+    <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+    <p class="text-sm">loves long walks</p>
+  </Fragment>
+
+  <Fragment slot="footer">
+    <p class="text-sm">3 years old</p>
+    <Button variant="secondary">Adopt me</Button>
+  </Fragment>
+</Card>
+    </div>
+  </DocsTabItem>
+  <DocsTabItem label="Source">
+
+```astro
+<Card class="relative aspect-[320/390] bg-gray-100 dark:bg-gray-800 w-full max-w-[320px]">
+  <Fragment slot="media">
+    <img
+      alt="Happy pet"
+      aria-hidden="true"
+      class="pointer-events-none absolute inset-0 h-full w-full select-none object-cover"
+      src="/demo/doggo.png"
+    />
+    <div
+      aria-hidden="true"
+      class="pointer-events-none absolute bottom-0 left-0 right-0 h-[64px]"
+    >
+      <div
+        class="absolute inset-0 h-[200%] backdrop-blur-sm"
+        style={{
+          WebkitMaskImage: "linear-gradient(to top, black 80%, transparent)",
+          maskImage: "linear-gradient(to top, black 80%, transparent)",
+          maskRepeat: "no-repeat",
+          maskSize: "100% 100%",
+        }}
+      />
+    </div>
+  </Fragment>
+
+  <Fragment slot="header">
+    <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+    <p class="text-sm">loves long walks</p>
+  </Fragment>
+
+  <Fragment slot="footer">
+    <p class="text-sm">3 years old</p>
+    <Button variant="secondary">Adopt me</Button>
+  </Fragment>
+</Card>
+```
+  </DocsTabItem>
+</DocsTabs>
+
+### Ghost variant
+
+<DocsTabs>
+  <DocsTabItem label="Preview">
+    <div class="not-content sl-bejamas-component-preview flex justify-center p-10 border border-border border-dashed rounded-xl min-h-[450px] items-center">
+<Card variant="ghost" class="max-w-[320px]">
+  <Fragment slot="media">
+    <img
+      alt="Happy pet"
+      aria-hidden="true"
+      src="https://images.unsplash.com/photo-1755899850036-084006cbc1c2?q=80&w=2288&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    />
+  </Fragment>
+  <Fragment slot="header">
+    <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+    <p class="text-sm">loves long walks</p>
+  </Fragment>
+</Card>
+    </div>
+  </DocsTabItem>
+  <DocsTabItem label="Source">
+
+```astro
+<Card variant="ghost" class="max-w-[320px]">
+  <Fragment slot="media">
+    <img
+      alt="Happy pet"
+      aria-hidden="true"
+      src="https://images.unsplash.com/photo-1755899850036-084006cbc1c2?q=80&w=2288&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    />
+  </Fragment>
+  <Fragment slot="header">
+    <h3 class="text-xl font-medium leading-none">Jacky good boi</h3>
+    <p class="text-sm">loves long walks</p>
+  </Fragment>
+</Card>
+```
+  </DocsTabItem>
+</DocsTabs>
