--- a/apps/web/src/content/docs/components/input.mdx
+++ b/apps/web/src/content/docs/components/input.mdx
@@ -67,20 +67,19 @@ Base input field used in forms.
  * @description Base input field used in forms.
  * @status stable
  * @since 0.1.0
- * 
+ *
  * @example
- * 
+ *
  * <Input type="text" placeholder="Enter your email" />
- * 
+ *
  */
 
 import { cn } from "../lib/utils";
 
-const { class: className = '', type = 'text', ...props } = Astro.props;
+const { class: className = "", type = "text", ...props } = Astro.props;
 
 const baseClass =
-  "file:text-foreground border placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-10 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive";
-
+  "file:text-foreground border placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9.5 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive";
 ---
 
 <input
@@ -92,13 +91,3 @@ const baseClass =
 ```
   </DocsTabItem>
 </DocsTabs>
-
-## Usage
-
-<Input />
-
-
-## Props
-
-- class (default: '')
-- type (default: 'text')
