--- a/apps/web/src/content/docs/components/link-group.mdx
+++ b/apps/web/src/content/docs/components/link-group.mdx
@@ -1,10 +1,10 @@
 ---
-title: FooterLinks
+title: Link Group
 description: Renders a group of footer links, optionally with a title.
 ---
 
 import { Tabs as DocsTabs, TabItem as DocsTabItem } from '@astrojs/starlight/components';
-import FooterLinks from '@bejamas/ui/components/FooterLinks.astro';
+import LinkGroup from '@bejamas/ui/components/LinkGroup.astro';
 
 Renders a group of footer links, optionally with a title.
 
@@ -16,28 +16,28 @@ Renders a group of footer links, optionally with a title.
   <DocsTabItem label="bun">
 
 ```bash
- bunx bejamas add footer-links
+ bunx bejamas add link-group
 ```
 
   </DocsTabItem>
   <DocsTabItem label="npm">
 
 ```bash
- npx bejamas add footer-links
+ npx bejamas add link-group
 ```
 
   </DocsTabItem>
   <DocsTabItem label="pnpm">
 
 ```bash
- pnpm dlx bejamas add footer-links
+ pnpm dlx bejamas add link-group
 ```
 
   </DocsTabItem>
   <DocsTabItem label="yarn">
 
 ```bash
- yarn dlx bejamas add footer-links
+ yarn dlx bejamas add link-group
 ```
 
   </DocsTabItem>
@@ -48,21 +48,21 @@ Renders a group of footer links, optionally with a title.
 ```astro
 ---
 /**
- * @component FooterLinks
- * @title FooterLinks
+ * @component LinkGroup
+ * @title Link Group
  * @description Renders a group of footer links, optionally with a title.
  * @status stable
  * @since 0.1.0
- * 
+ *
  * @props
  * - title?: string - Optional title for the link group.
  * - items: Array<{ label: string, href: string }> - List of links to display.
  * - class?: string - Additional classes for the container.
- * 
+ *
  * @usage
- * 
+ *
  * ```astro
- * <FooterLinks
+ * <LinkGroup
  *   title="Company"
  *   items={[
  *     { label: "Home", href: "/" },
@@ -72,32 +72,34 @@ Renders a group of footer links, optionally with a title.
  * ```
  */
 
-const { title, items = [], class: className = '', ...props } = Astro.props;
+const { title, items = [], class: className = "", ...props } = Astro.props;
 ---
 
 <div class={`flex flex-col gap-2 ${className}`.trim()} {...props}>
-  {title && (
-    <h4 class="text-lg mb-2 text-current">{title}</h4>
-  )}
+  {title && <h4 class="text-lg mb-2 text-current">{title}</h4>}
   <ul class="flex flex-col gap-1">
-    {items.map((item: { label: string, href: string }) => (
-      <li>
-        <a
-          href={item.href}
-          class="transition-colors underline-offset-4 hover:underline text-footer-primary/60"
-        >
-          {item.label}
-        </a>
-      </li>
-    ))}
+    {
+      items.map((item: { label: string; href: string }) => (
+        <li>
+          <a
+            href={item.href}
+            class="transition-colors underline-offset-4 hover:underline text-footer-primary/60"
+          >
+            {item.label}
+          </a>
+        </li>
+      ))
+    }
   </ul>
 </div>
 ```
   </DocsTabItem>
 </DocsTabs>
 
+## Usage
+
 ```astro
-<FooterLinks
+<LinkGroup
   title="Company"
   items={[
     { label: "Home", href: "/" },
@@ -105,9 +107,3 @@ const { title, items = [], class: className = '', ...props } = Astro.props;
   ]}
 />
 ```
-
-## Props
-
-- title
-- items (default: [])
-- class (default: '')
