--- a/apps/web/src/content/docs/components/sticky-surface.mdx
+++ b/apps/web/src/content/docs/components/sticky-surface.mdx
@@ -93,13 +93,6 @@ A sticky surface component with scroll-based effects (border, shadow, surface sw
  * @title Sticky Surface
  * @description A sticky surface component with scroll-based effects (border, shadow, surface swap, shrink, glass).
  * 
- * @prop {string} as - Semantic tag override (default: "div")
- * @prop {string|number} threshold - Scroll threshold for effects (default: "16px")
- * @prop {Array<string>} effects - Effects to apply. Options: "line", "elevate", "surface", "backdrop"
- * @prop {string} class - Additional classes
- * @prop {object} style - Inline styles
- * @prop {boolean} observeStuck - Whether to observe the stuck state of the surface
- * 
  * @example
  * 
  * <div class="overflow-y-auto max-h-[320px] w-full bg-border px-8 border-border">
@@ -183,8 +176,8 @@ const effectClasses = cn(
 );
 
 const styleVars = Object.entries(defaultVars)
-  .map(([k, v]) => `${k}:${v}`)
-  .join(";");
+  ?.map(([k, v]) => `${k}:${v}`)
+  ?.join(";");
 ---
 
 <Tag
@@ -234,16 +227,3 @@ const styleVars = Object.entries(defaultVars)
 ```
   </DocsTabItem>
 </DocsTabs>
-
-## Usage
-
-<StickySurface />
-
-
-## Props
-
-- as (default: "div")
-- threshold (default: "16px")
-- effects (default: [])
-- class (default: "")
-- style (default: "")
