--- a/apps/web/src/content/docs/templates.mdx
+++ b/apps/web/src/content/docs/templates.mdx
@@ -16,26 +16,25 @@ hero:
       variant: minimal
 ---
 
-import Footer from '@bejamas/ui/components/Footer.astro';
-import FooterLinks from '@bejamas/ui/components/FooterLinks.astro';
-
+import Footer from "@bejamas/ui/components/Footer.astro";
+import LinkGroup from "@bejamas/ui/components/LinkGroup.astro";
 
 <Footer>
   <div class="grid grid-cols-4 gap-4">
-  <div>Acme, Inc. Logo</div>
-  <FooterLinks
-    title="Resources"
-    items={[
-      { label: "Blog", href: "/blog" },
-      { label: "Documentation", href: "/docs" }
-    ]}
-  />
-  <FooterLinks
-    title="Company"
-    items={[
-      { label: "Home", href: "/" },
-      { label: "About", href: "/about" }
-    ]}
-  />
+    <div>Acme, Inc. Logo</div>
+    <LinkGroup
+      title="Resources"
+      items={[
+        { label: "Blog", href: "/blog" },
+        { label: "Documentation", href: "/docs" },
+      ]}
+    />
+    <LinkGroup
+      title="Company"
+      items={[
+        { label: "Home", href: "/" },
+        { label: "About", href: "/about" },
+      ]}
+    />
   </div>
 </Footer>
